--- a/my_to_do_app/templates/to_do/index.html
+++ b/my_to_do_app/templates/to_do/index.html
@@ -1,3 +1,22 @@
-{% extends "../base.html" %}
-
-{%block title%}Todo{%endblock%}
+{% extends "../base.html" %} 
+{%block title%}Todo{%endblock%} 
+{%block content%}
+<div class="row">
+  <div class="col">
+    <h2>Add Item</h2>
+    <input type="text" class="form-control mb-2 mr-small-2" placeholder="type here...">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+</div>
+<div class="row py-2">
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item" aria-current="true">A first item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A fourth item</li>
+            <li class="list-group-item">And a fifth one</li>
+          </ul>
+    </div>
+</div>
+{%endblock%}
