--- a/my_to_do_app/templates/to_do/index.html
+++ b/my_to_do_app/templates/to_do/index.html
@@ -17,12 +17,11 @@
 <div class="row mt-4">
     <div class="col">
         <ul class="list-group">
-            <li class="list-group-item" aria-current="true">A first item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
-          </ul>
+          {%for todo in todos%}
+            <li class="list-group-item" aria-current="true">{{todo.text}}</li>
+          {%endfor%}
+            
+        </ul>
     </div>
 </div>
 {%endblock%}
