--- a/my_to_do_app/templates/to_do/index.html
+++ b/my_to_do_app/templates/to_do/index.html
@@ -18,7 +18,16 @@
     <div class="col">
         <ul class="list-group">
           {%for todo in todos%}
-            <li class="list-group-item" aria-current="true">{{todo.text}}</li>
+            <li class="list-group-item">
+              {{todo.text}}
+              <div class = "float-end">
+                <form action="/todo/delete_todo/{{todo.id}}/" method="POST">
+                  {%csrf_token%}
+                  <button type="submit" class="btn btn-sm btn-danger mb-2 ms-2 rounded">Delete</button>
+                </form>
+              </div>
+
+            </li>
           {%endfor%}
             
         </ul>
